@@ -1,3 +1,8 @@
+2008-09-16  Jonathan Gonzalez V.  <zeus@gnu.org>
+
+	* postgres-functions.c (GetTotalCashSell, GetTotalSell)
+	(GetTotalCreditSell): Fixed to not include nullify sells.
+
 2008-09-14  Jonathan Gonzalez V.  <zeus@gnu.org>
 
 	* encriptar.c: Clean up of commented code.
